# rustbasic

./: .dockerignore  .env  .env.example  .gitignore  AI_PROMPT.md  AI_PROMPT_ACTION.md  AI_TEMPLATE.md  Cargo.toml  Dockerfile  agents.md  build.rs  catatan.md  htmx.md  list.md  package-lock.json  package.json  rb  readme.md  tailwind.config.js  template.html  vite.config.js
.cargo/: config.toml
.dev/instructions/: AI_PROMPT.md  AI_PROMPT_ACTION.md  AI_TEMPLATE.md  PRD.md  agents.md  catatan.md  development.md  inertia.md
database/: rustbasic.sqlite  session.sql
database/migrations/: 20260501000001_create_sessions_table.sql  20260501000002_create_users_table.sql  m20260501_000001_create_sessions_table.rs  m20260501_000002_create_users_table.rs  mod.rs
database/seeders/: database_seeder.rs  mod.rs
docs/: README.md  advanced.md  architecture.md  auth_cli.md  basics.md  cli.md  database.md  deployment.md  http.md  inline_routing.md  jwt.md  medialibrary.md  named_routes.md  native.md  permission.md  strings.md  testing.md  translatable.md  views.md  webp.md  websocket.md
public/css/: style.css
public/js/: app.js
resources/css/: style.css
resources/views/: dashboard.html  test_csrf.html  test_csrf_result.html  welcome.html
resources/views/auth/: login.html  register.html
resources/views/components/: assets.html  buttons.html  display.html  feedback.html  forms.html  overlays.html
resources/views/errors/: debug.html  minimal.html
resources/views/layouts/: app.html
src/: cli.rs  lib.rs  main.rs
src/app/: inertia.rs  mod.rs  seeder.rs
src/app/http/: mod.rs
src/app/http/controllers/: dashboard_controller.rs  mod.rs  test_controller.rs  welcome_controller.rs
src/app/http/controllers/auth/: auth_controller.rs
src/app/http/middleware/: auth.rs  cors.rs  csrf.rs  logging.rs  mod.rs  security_headers.rs
src/app/http/requests/: mod.rs
src/app/http/responses/: mod.rs
src/app/models/: mod.rs  users.rs
src/config/: app.rs  build.rs  cli.rs  database.rs  mail.rs  mod.rs  seeder.rs  server.rs  session.rs  view.rs
src/config/cli/: auth.rs  scaffolding.rs
src/database/: migrations.rs  mod.rs  session.rs  session_manager.rs
src/resources/css/: style.css
src/resources/js/: main.tsx  route.ts
src/resources/js/Layouts/: AppLayout.tsx
src/resources/js/Pages/: About.tsx  Welcome.tsx
src/resources/views/: app.rb.html  welcome.rb.html
src/resources/views/errors/: debug.rb.html  minimal.rb.html
src/resources/views/layouts/: app.rb.html
src/routes/: api.rs  mod.rs  web.rs
storage/logs/: rustbasic.log.2026-05-02
tests/: feature_auth_test.rs
