[package]
name = "rustbasic"
version = "0.1.9"
edition = "2024"
build = "src/config/build.rs"
description = "The official starter template and CLI tool for the RustBasic Framework."
license = "MIT"
repository = "https://github.com/herisvan321/rustbasic"
keywords = ["web", "framework", "starter", "axum", "orm"]
categories = ["web-programming::http-server", "development-tools::scaffolding"]
default-run = "rustbasic"

[[bin]]
name = "rustbasic"
path = "src/main.rs"

[dependencies]
# Core Framework (Local Path)
rustbasic-core = "0.1"

# Macro dependencies
sea-orm = { version = "1.1", features = ["macros", "with-chrono"] }
serde = { version = "1.0", features = ["derive"] }
rust-embed = "8.1"
tokio = { version = "1.52", features = ["full"] }

# Profile Optimizations
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unexpected_cfgs = "allow"



