[package]
name = "rustbasic"
version = "0.1.12"
edition = "2024"
build = "build.rs"
description = "The official starter template and CLI tool for the RustBasic Framework."
license = "MIT"
repository = "https://github.com/herisvan321/rustbasic"
keywords = ["web", "framework", "starter", "sqlx"]
categories = ["web-programming::http-server", "development-tools::scaffolding"]
default-run = "rustbasic"


[lib]
name = "rustbasic"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]
[[bin]]
name = "rustbasic"
path = "src/main.rs"

[dependencies]
rustbasic-core = { version = "0.0",  features = [
    "sqlite",
    "mysql",
    "websocket"
] }

# Profile Optimizations
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unexpected_cfgs = "allow"

[build-dependencies]
rustbasic-core = { version = "0.0" }
